// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlaceholderNode > isSpecialChildPlaceholder > should render CodeBranchIcon for other placeholders 1`] = `
<DocumentFragment>
  <g
    data-testid="mock-layer"
  >
    <g
      class="placeholder-node"
      data-nodelabel="test-placeholder"
      data-testid="placeholder-node__test-placeholder"
    >
      <foreignobject
        data-nodelabel="test-placeholder"
        height="75"
        width="90"
      >
        <div
          class="placeholder-node__container"
          data-testid="undefined|test-placeholder"
        >
          <div
            class="placeholder-node__container__image"
            title="Click to add when branch"
          >
            <span
              data-testid="mock-icon"
            >
              <svg
                data-testid="code-branch-icon"
                role="img"
              >
                <path />
              </svg>
            </span>
          </div>
        </div>
      </foreignobject>
      <foreignobject
        class="placeholder-node__label"
        height="24"
        width="150"
        x="-30"
        y="74"
      >
        <div
          class="placeholder-node__label__text"
        >
          <span
            title="Add test-placeholder"
          >
            Add test-placeholder
          </span>
        </div>
      </foreignobject>
    </g>
  </g>
</DocumentFragment>
`;

exports[`PlaceholderNode > isSpecialChildPlaceholder > should render PlusCircleIcon for regular placeholder 1`] = `
<DocumentFragment>
  <g
    data-testid="mock-layer"
  >
    <g
      class="placeholder-node"
      data-nodelabel="test-placeholder"
      data-testid="placeholder-node__test-placeholder"
    >
      <foreignobject
        data-nodelabel="test-placeholder"
        height="75"
        width="90"
      >
        <div
          class="placeholder-node__container"
          data-testid="undefined|test-placeholder"
        >
          <div
            class="placeholder-node__container__image"
            title="Click to add a step"
          >
            <span
              data-testid="mock-icon"
            >
              <svg
                data-testid="plus-circle-icon"
                role="img"
              >
                <path />
              </svg>
            </span>
          </div>
        </div>
      </foreignobject>
      <foreignobject
        class="placeholder-node__label"
        height="24"
        width="150"
        x="-30"
        y="74"
      >
        <div
          class="placeholder-node__label__text"
        >
          <span
            title="Add test-placeholder"
          >
            Add test-placeholder
          </span>
        </div>
      </foreignobject>
    </g>
  </g>
</DocumentFragment>
`;

exports[`PlaceholderNode > isSpecialChildPlaceholder > should render PlusCircleIcon for special child placeholder 1`] = `
<DocumentFragment>
  <g
    data-testid="mock-layer"
  >
    <g
      class="placeholder-node"
      data-nodelabel="test-placeholder"
      data-testid="placeholder-node__test-placeholder"
    >
      <foreignobject
        data-nodelabel="test-placeholder"
        height="75"
        width="90"
      >
        <div
          class="placeholder-node__container"
          data-testid="undefined|test-placeholder"
        >
          <div
            class="placeholder-node__container__image"
            title="Click to add a step"
          >
            <span
              data-testid="mock-icon"
            >
              <svg
                data-testid="code-branch-icon"
                role="img"
              >
                <path />
              </svg>
            </span>
          </div>
        </div>
      </foreignobject>
      <foreignobject
        class="placeholder-node__label"
        height="24"
        width="150"
        x="-30"
        y="74"
      >
        <div
          class="placeholder-node__label__text"
        >
          <span
            title="Add test-placeholder"
          >
            Add test-placeholder
          </span>
        </div>
      </foreignobject>
    </g>
  </g>
</DocumentFragment>
`;

exports[`PlaceholderNode > should render without error 1`] = `<DocumentFragment />`;
